<resources>
    <string name="app_name">KD +</string>

    <string name="noNetworkFound">You\'re not connected to the Internet. Please connect and retry. </string>
    <string name="msg_NO_INTERNET_RESPOND">Please connect the device with internet</string>
    <string name="msg_NO_INTERNET_TITLE">Connection error</string>
    <string name="msg_NO_INTERNET_MSG">We can\’t reach our network right now. Please check your connection.</string>
    <string name="msg_goto_settings">CONNECTION SETTINGS</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_update_image">Uploading images</string>
    <string name="msg_update_status">Update status</string>
    <string name="msg_speed_check">Checking internet speed</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_unauthorise_error">Unauthorised Access!</string>

    <string name="dialog_ok_btn">Ok</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="dialog_clear_btn">Clear</string>
    <string name="msg_press_back_twice">Double tab to back</string>
    <string name="msg_kd">Message From KD +</string>
    <string name="no_record_found">No record found…</string>

    <string name="str_title">KD Digital</string>
    <string name="str_desc">KD Digital has developed as the prominent IT products solution provider combining experience and ability to implement. </string>
    <string name="str_forgot">Forgot Password ?</string>
    <string name="str_welcome">Welcome, </string>
    <string name="str_send_otp">Send OTP</string>
    <string name="str_verify_otp">Verify OTP</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_resend">Resend</string>
    <string name="str_verify">Verify</string>
    <string name="str_submit">Submit</string>
    <string name="str_update">Update</string>
    <string name="str_reset_msg">Your password is reset.</string>
    <string name="str_dialog_title">Message From KD +</string>
    <string name="str_reset">Reset Password</string>
    <string name="str_reset1">Please enter your KD+ ID to help us identify you. So we will send you link to your email.</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_signin1">Welcome to KD Group !!!</string>
    <string name="str_signup1">Create KD Group account !!!</string>
    <string name="str_or_sign">Or sign-up with</string>
    <string name="str_already">Already have a KD+ ID ?</string>
    <string name="str_dont">Not a member yet ?</string>
    <string name="str_return">Return to</string>

    <string name="str_name">Full Name</string>
    <string name="str_fname">First Name</string>
    <string name="str_lname">Last Name</string>
    <string name="str_uname">Username</string>
    <string name="str_gender">Select Gender</string>
    <string name="str_uname_email">Username / Email</string>
    <string name="str_email">Email Address</string>
    <string name="str_mobile">Mobile Number</string>
    <string name="str_pwd">Password</string>
    <string name="str_conf_pwd">Confirm Password</string>
    <string name="str_old_pwd">Old Password</string>
    <string name="str_new_pwd">New Password</string>

    <string name="str_select_email">Select Email Account</string>
    <string name="str_step1">Step 1: User Login Details</string>
    <string name="str_step2">Step 2: Verify Email Address</string>
    <string name="str_step3">Step 3: Account Completion</string>
    <string name="str_register_complet">Your registration has been completed successfully.</string>
    <string name="str_note">
        <![CDATA[
            <p><strong>Next Step:</strong> Please verify your email address<br>
            <strong> %s </strong></p>
            <p><strong>Note: </strong> If you don\'t receive the confirmation message within a few minutes of signing up, please check your Spam/Junk/Bulk Mail folder. If you are still unable to locate the email, please enter the valide email address that was entered during registration.</p>
        ]]>
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="str_m_dashboard">Dashboard</string>
    <string name="str_m_prof">My Profile</string>
    <string name="str_m_product">Product List</string>
    <string name="str_m_edt_prof">Edit Profile</string>
    <string name="str_m_chng_pwd">Change Password</string>
    <string name="str_m_share">Share</string>
    <string name="str_m_contact">Contact Us</string>
    <string name="str_m_feedback">Feedback</string>
    <string name="str_m_logout">Logout</string>

    <string name="str_edit">Edit</string>
    <string name="str_delet">Delete</string>
    <string name="str_save">SAVE</string>
    <string name="str_m_comp">Complaint</string>
    <string name="str_comp_recnt">Recent Complaints</string>
    <string name="str_comp_stat">Check Complaint Status</string>
    <string name="str_tic_no">Ticket No.</string>
    <string name="str_p_info">Personal Information</string>
    <string name="str_c_info">Complaint Information</string>
    <string name="str_comp_cat">Complaint Category</string>
    <string name="str_category">Category</string>
    <string name="str_comp_barcode">Scan Product Code</string>
    <string name="str_comp_desc">Descirbe Complaint</string>

    <string name="str_dob">Date of Birth</string>
    <string name="str_dmy">YYYY-MM-DD</string>
    <string name="str_c_adrs">Address Detail</string>
    <string name="str_pa_adrs">Permanent Address Detail</string>
    <string name="str_f_no">Flate No.</string>
    <string name="str_apart">Society\\Apartment</string>
    <string name="str_adrs">Address</string>
    <string name="str_area">Area</string>
    <string name="str_city">City</string>
    <string name="str_dist">District</string>
    <string name="str_state">State</string>
    <string name="str_country">Country</string>
    <string name="str_pin">Pincode</string>
    <string name="str_pinc">Pincode: %1$s</string>
    <string name="str_c_p">Is Permanent Address is same as Current Address ?</string>
    <string name="str_p_adrs">Primary Address</string>
    <string name="str_s_adrs">Secondary Address</string>

    <string name="txt_guest">Guest</string>
    <string name="str_rgstr1">Please enter email address</string>
    <string name="str_rgstr2">Not a valid email address!</string>
    <string name="str_rgstr3">Please enter username or email address</string>
    <string name="str_rgstr4">Please enter password</string>
    <string name="str_rgstr5">Please enter confirm password</string>
    <string name="str_rgstr6">Password doe\'s not match!</string>
    <string name="str_rgstr7">Please enter firstname</string>
    <string name="str_rgstr8">Please enter lastname</string>
    <string name="str_rgstr9">Please enter username</string>
    <string name="str_rgstr10">Please enter old password</string>

    <string name="address_error1">Address is not found…</string>
    <string name="addaddress_title1"> + Add New Address</string>
    <string name="addaddress_title5">Flat/House/Office no</string>
    <string name="addaddress_title6">Street/society/office name</string>
    <string name="addaddress_title7">Landmark/Locality, City</string>
    <string name="addaddress_title10">Home</string>
    <string name="addaddress_title11">Office</string>
    <string name="addaddress_title12">Other</string>
    <string name="addaddress_title13">Please enter valid address.</string>
    <string name="addaddress_title14">Please enter a valid pin code.</string>
    <string name="addaddress_title15">Street/society/office name*</string>
    <string name="addaddress_title16">Landmark/Locality, City*</string>
    <string name="addaddress_title17">City*</string>

    <string name="complaint_title1">Complaint No : </string>
    <string name="complaint_title2">Category : </string>
    <string name="complaint_title3">Complaint : </string>
    <string name="complaint_title4">Complaint Start Date: </string>
    <string name="complaint_title5">Complaint End Date : </string>
    <string name="complaint_title6">Status : </string>

    <string name="complaint_detail1">Complaint Status / Information</string>
    <string name="complaint_detail2">Complaint ID</string>
    <string name="complaint_detail3">Complaint Date &amp; Time</string>
    <string name="complaint_detail4">Complaint Status</string>
    <string name="complaint_detail5">Complaint Category</string>
    <string name="complaint_detail6">Complaint Description</string>
    <string name="complaint_detail7">Complaint Name</string>
    <string name="complaint_detail8">Complaint Address</string>
    <string name="complaint_detail9">Complaint Mobile Number</string>
    <string name="complaint_detail10">Complaint Assignment Details</string>
    <string name="complaint_detail11">Employee Name</string>
    <string name="complaint_detail12">Contact Number</string>
    <string name="complaint_detail13">Compliance Date &amp; Time</string>
    <string name="complaint_detail14">Remarks</string>

    <string name="invalid_otp">"Invalid OTP!!!"</string>
    <string name="invalid_usr_pwd">"Invalid User Detail!!!"</string>

    <string name="subject">Just Try KD Group App at:</string>
    <string name="google_url">https://play.google.com/store/apps/details?id=</string>

    <string name="storage_permission1">If you reject permission, you can not use this call feature.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyD_FlGaT2tUn6-TYGfd6-looXv_An9kwps
    </string>
</resources>